# intellidue-core

./: .gitignore  CONTRIBUTING.md  LICENSE_PENDING.md  NO_LICENSE.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
docs/: GITHUB2C_ACCEPTANCE_PENDING.md  GITHUB2C_BRANCH_INPUT.md  architecture.md  cli-contract.md  deployment.md  github-5-real-private-replay.md  github-final-checklist.md  github0-audit.md  github1-bootstrap.md  github2a-acceptance-pending.md  github2a-schema-hardening.md  github2b-acceptance-pending.md  github2b-promotion-engine.md  github2c-cli-package-validation.md  github3-ci-security-release.md  github4-private-runtime-adapter.md  new-project-runbook.md  operating-model.md  package-format.md  private-data-assurance.md  private-file-retention.md  private-runtime-contract.md  product-standard.md  public-private-boundary.md  quality-gates.md  release-policy.md  repository-settings.md  runbook.md  schema-contract-matrix.md  schema-contracts.md  schema-error-codes.md  schema-versioning.md
schemas/: current_project_state.schema.json  package_validation.schema.json  private_runtime_binding.schema.json  product_manifest.schema.json  promotion_pointer.schema.json  release_lock.schema.json
scripts/: check_repo_hygiene.py  release_gate.py  run_private_replay_acceptance.py
templates/: CLEAN_CHAT_PROMPT_TEMPLATE.md  START_HERE_TEMPLATE.md  current_project_state.template.json  package_validation.template.json  release_lock.template.json
tests/: test_manifest.py  test_manifest_reconciliation.py  test_package_format.py  (+9 more)
(+48 files in other folders)
