[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "intellidue-core"
version = "1.0.1"
description = "Project-neutral due-diligence production controls"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
intellidue = "intellidue_core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
