[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "intellidue-core"
version = "1.2.0"
description = "Project-neutral due-diligence production controls"
requires-python = ">=3.10"
dependencies = ["jsonschema>=4.22,<5"]

[project.scripts]
intellidue = "intellidue_core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
intellidue_core = ["schemas/*.json"]
